--- a/index.css
+++ b/index.css
@@ -25,9 +25,19 @@ header {
   color: #6db393;
 }
 
+header .open-button {
+  width: 182px;
+  padding: 10px 20px !important;
+  font-size: 13px;
+  white-space: nowrap;
+  margin-right: 0;
+}
+
 .open-button {
   background: rgba(109, 179, 147, 1);
   height: 44px;
+
+  width: 300px;
 }
 
 .open-button:hover {
@@ -143,7 +153,7 @@ header {
   /* Header Mobile - faqat logo va button */
   header {
     padding: 12px 16px !important;
-    border-radius: 16px !important;
+    border-radius: 120px !important;
     margin: 0 8px !important;
     gap: 12px;
   }
@@ -200,7 +210,7 @@ header {
     /* Header Mobile - faqat logo va button */
     header {
       padding: 12px 16px !important;
-      border-radius: 16px !important;
+      border-radius: 120px !important;
       margin: 0 8px !important;
       gap: 12px;
     }
@@ -216,11 +226,17 @@ header {
 
     /* Header button */
     header .open-button {
+      width: 162px;
       padding: 10px 20px !important;
       font-size: 13px;
       white-space: nowrap;
+      margin-right: 0;
     }
 
+    .open-button {
+      width: 300px;
+      height: 44px;
+    }
     /* Hero Section Mobile */
     .hero {
       padding: 32px 20px !important;
@@ -546,12 +562,6 @@ header {
 
   section:last-of-type button {
     width: 100% !important;
-  }
-
-  /* Footer */
-  footer {
-    border-radius: 20px !important;
-    padding: 16px !important;
   }
 
   footer p {
