--- a/index.css
+++ b/index.css
@@ -148,10 +148,6 @@ header img {
   margin-left: 10px;
 }
 @media (max-width: 768px) {
-  body {
-    padding: 8px;
-  }
-
   /* Header Mobile - faqat logo va button */
   header {
     padding: 12px 16px !important;
@@ -204,8 +200,8 @@ header img {
   }
 
   @media (max-width: 768px) {
-    body {
-      padding: 8px;
+    .contron-all-sec {
+      margin: 0 8px !important;
     }
 
     /* Header Mobile - faqat logo va button */
@@ -560,11 +556,7 @@ header img {
     font-size: 25px !important;
     line-height: 28px !important;
     font-weight: 700;
-  }
-
-  section:last-of-type p {
-    font-size: 10px !important;
-    width: 154px;
+    width: 300px;
   }
 
   section:last-of-type button {
